<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen">
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableLayout
            android:id="@+id/tableHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:stretchColumns="*">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0.5dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:background="@drawable/header_shape"
                    android:gravity="center"
                    android:text="@string/dayHeaderText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0.5dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:background="@drawable/header_shape"
                    android:gravity="center"
                    android:text="@string/morningSpendingHeaderText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0.5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/header_shape"
                    android:gravity="center"
                    android:text="@string/afternoonSpendingHeaderText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0.5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/header_shape"
                    android:gravity="center"
                    android:text="@string/expenseNotesHeaderText"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="188dp"
        android:layout_marginTop="300dp"
        android:orientation="vertical"
        android:background="@drawable/cell_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollview">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@drawable/header_shape"
                    android:text="@string/tableHeaderText1">
                </TextView>
                <EditText
                    android:id="@+id/dayHeaderText"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:hint="@string/dayInputHint"
                    android:background="@drawable/cell_shape"
                    android:textAlignment="center" />
                <EditText
                    android:id="@+id/morningHeaderText"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/morningSpendingInputHint"
                    android:background="@drawable/cell_shape"
                    android:textAlignment="center" />
                <EditText
                    android:id="@+id/afternoonHeaderText"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/afternoonSpendingInputHint"
                    android:background="@drawable/cell_shape"
                    android:textAlignment="center" />
                <EditText
                    android:id="@+id/activityHeaderText"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:hint="@string/expenseNotesInputHint"
                    android:background="@drawable/cell_shape"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="81dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/saveButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="81dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:text="@string/clearButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

</androidx.constraintlayout.widget.ConstraintLayout>